# DualIC4VarjoApp_AdaptiveGazeGuidance

./: .gitignore  CMakeLists.txt  README.md  gamma1.json  launch_experiment_ui.py  stereo_calib.json  stereo_calibration.json
.github/workflows/: apply_qp23_app_patch.yml
personalization/: DEFAULT.json  Iwatake.json
shaders/D3D12Processing/: AdvancedTransformRgba.hlsl  ApplyLut3D.hlsl  BlurCommon.hlsli  ClassColorMapRgba.hlsl  ColorAdjustRgba.hlsl  ColorSpace.hlsli  CompositeRgba.hlsl  ConfidenceHeatmapRgba.hlsl  ConvertNv12ToRgb.hlsl  ConvertRgbToNv12.hlsl  ConvertRgbToRgb.hlsl  FusedYuv420ToRgbResize.hlsl  GaussianBlurHorizontalRgba.hlsl  GaussianBlurVerticalRgba.hlsl  KernelFilterRgba.hlsl  MaskApplyRgba.hlsl  MaskBlendRgba.hlsl  MaskCombineRgba.hlsl  MaskCommon.hlsli  MaskInvertRgba.hlsl  MaskOverlayRgba.hlsl  ProcessingCommon.hlsli  ProcessingExtendedCommon.hlsli  PyramidCommon.hlsli  PyramidDownsample2xRgba.hlsl  PyramidUpsample2xRgba.hlsl  RangeThresholdRgba.hlsl  RegionBlurBlendRgba.hlsl  RegionEffectCommon.hlsli  RegionEffectRgba.hlsl  RemapRgba.hlsl  ResizeRgba.hlsl  ThresholdCommon.hlsli  ThresholdRgba.hlsl  YuvPrimitiveProbe.hlsl  YuvPrimitives.hlsli
src/: AppConfig.cpp  AppConfig.hpp  ApplicationMain.cpp  ApplicationMainImu.cpp  ApplicationMainPlaneControl.cpp  ApplicationMainRealtimeCalibration.cpp  ApplicationMainRealtimeCalibrationCoordinated.cpp  ApplicationMainTimestamp.cpp  ApplicationMainTimestampImu.cpp  ApplicationMainTimestampImuVst.cpp  ApplicationMainTimestampImuVstEyeTracker.cpp  ApplicationMainVst.cpp  BlackCirclePlaneIntegration.hpp  CalibrationRuntimeBridge.hpp  CheckerboardStereoCalibration.cpp  CheckerboardStereoCalibration.hpp  CoordinatedCameraCaptureThread.hpp  DebugCenterDotPlaneIntegration.hpp  DisplayTextureRing.cpp  DisplayTextureRing.hpp  ExperimentOutput.cpp  ExperimentOutput.hpp  EyeTrackerLoadServiceHook.cpp  EyeTrackerLoadServiceHook.hpp  FadeOutPostProcessIntegration.hpp  GazeOnCameraFrameService.cpp  GazeOnCameraFrameService.hpp  GracefulShutdownIntegration.hpp  GuiControlBridge.hpp  GuiPerformanceStats.hpp  GuiPlaneControlIntegration.hpp  ImGuiStereoPreview.cpp  ImGuiStereoPreview.hpp  ImGuiStereoPreviewGazeOverlay.cpp  ImuLoadServiceHook.cpp  ImuLoadServiceHook.hpp  KeyInputService.cpp  KeyInputService.hpp  KeyboardLockIntegration.hpp  PersonalizationSettings.cpp  (+28 more)
